# bagbot

./: .env.production.example  .gitignore  .pre-commit-config.yaml  AUTH_UI_GUIDE.md  COMPLETE_FRONTEND_STRUCTURE.md  COMPLETE_FRONTEND_STRUCTURE.txt  DEPLOYMENT_QUICK_START.md  FRONTEND_ANALYSIS_REPORT.md  FRONTEND_BUILD_REPORT.md  FRONTEND_DIRECTORY_TREE_ANALYSIS.md  MISSION_CONTROL_COMPLETE.md  Makefile  PHASE_2_QUICK_REF.md  PHASE_4.8_COMPLETE.md  PHASE_5_SESSION_1_COMPLETE.md  README.md  README_PRELAUNCH.md  TEST_ALIGNMENT_DECLARATIONS.md  THEME_SYSTEM_IMPLEMENTATION.md  __init__.py  advanced_cache.py  augmentations.py  backtester.py  bagbot.db  bagbot_rules.yml  barrier_labeling.py  best_genome_dual.json  bot.py  data.py  data_extras.py  data_utils.py  exchange.py  feature_selection.py  features.py  fix_scheduler_and_admin.patch  frontend_structure.txt  indicators.py  labeling.py  logging_config.py  main.py  (+24 more)
ai_service_helper/: knowledge_bridge.py  market_explainer.py
api/: __init__.py
artifacts/: README.md
backend/: .dockerignore  .env.example  __init__.py  main.py  requirements.txt  trading_state.py
backtest/: engine.py  executor.py  reporting.py
bagbot/: ADMIN_PAUSE_IMPLEMENTATION.md  INTELLIGENCE_PIPELINE_COMPLETE.md  __init__.py  bagbot.db  pytest.ini  render.yaml  requirements.txt  worker.py
deploy/: deploy.sh  nginx.conf  pre_deploy_checklist.sh  provision_vps.sh  rollback.sh
docs/: CHANGELOG.md  PHASE_4_QUICK_REF.md  STRIPE_QUICK_REF.md  STRIPE_SETUP.md  TRADING_CONNECTOR_EXAMPLES.md  api_contracts.json  brain_blueprint.md  job_envelope.md  (+3 more)
(+1702 files in other folders)
