[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bagbot"
version = "0.0.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "worker*", "engine*", "optimizer*", "backtest*"]
namespaces = false
